--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -67997,6 +67997,8 @@
 	<false/>
 	<key>EscapeShellCharsWithBackslash</key>
 	<false/>
+	<key>FlashTabBarInFullscreen</key>
+	<true/>
 	<key>FocusFollowsMouse</key>
 	<false/>
 	<key>FsTabDelay</key>
@@ -68141,7 +68143,7 @@
 	<key>HotkeyCode</key>
 	<integer>47</integer>
 	<key>HotkeyModifiers</key>
-	<integer>1179914</integer>
+	<integer>655428</integer>
 	<key>IRMemory</key>
 	<integer>4</integer>
 	<key>JobName</key>
@@ -68156,8 +68158,12 @@
 	<false/>
 	<key>NSColorPanelMode</key>
 	<string>6</string>
+	<key>NSColorPickerPageableNameListDefaults</key>
+	<string>1Crayons</string>
 	<key>NSColorPickerPreferredRGBEntryMode</key>
 	<integer>2</integer>
+	<key>NSFontPanelAttributes</key>
+	<string>1, 4</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Downloads</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
@@ -68199,19 +68205,19 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>310 267 228 297 0 0 1280 800 </string>
+	<string>421 380 228 297 0 0 1280 800 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>482 158 627 374 0 0 1280 777 </string>
+	<string>469 321 627 345 0 0 1280 800 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>330 290 620 392 0 0 1280 778 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 139 606 456 0 0 1280 778 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>366 352 918 381 0 0 1280 800 </string>
+	<string>9 374 770 381 0 0 1280 778 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 194 592 584 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>131 73 610 489 0 0 1280 800 </string>
+	<string>131 73 570 477 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -68236,65 +68242,65 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.23529411852359772</real>
+				<real>0.30196079611778259</real>
 				<key>Green Component</key>
-				<real>0.20392157137393951</real>
+				<real>0.30196079611778259</real>
 				<key>Red Component</key>
-				<real>0.18039216101169586</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
+				<real>0.16862745583057404</real>
 				<key>Green Component</key>
-				<real>0.058823529630899429</real>
+				<real>0.16862745583057404</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.59607845544815063</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.91372549533843994</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.28627452254295349</real>
+				<real>0.3333333432674408</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43137255311012268</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.87450981140136719</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.99215686321258545</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.75686275959014893</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.54509806632995605</real>
+				<real>0.80784314870834351</real>
 				<key>Red Component</key>
-				<real>0.16470588743686676</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15294118225574493</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.27843138575553894</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.91764706373214722</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.82745099067687988</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.7137255072593689</real>
+				<real>0.84313726425170898</real>
 				<key>Red Component</key>
-				<real>0.62745100259780884</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -68308,78 +68314,78 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43921568989753723</real>
+				<real>0.59607845544815063</real>
 				<key>Green Component</key>
-				<real>0.65490198135375977</real>
+				<real>0.9843137264251709</real>
 				<key>Red Component</key>
-				<real>0.20784313976764679</real>
+				<real>0.59607845544815063</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20784313976764679</real>
+				<real>0.54901963472366333</real>
 				<key>Green Component</key>
-				<real>0.58039218187332153</real>
+				<real>0.90196079015731812</real>
 				<key>Red Component</key>
-				<real>0.9843137264251709</real>
+				<real>0.94117647409439087</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.99883681535720825</real>
+				<real>0.061463020741939545</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.65533304214477539</real>
+				<real>0.70396053791046143</real>
 				<key>Red Component</key>
-				<real>0.46504727005958557</real>
+				<real>0.99394869804382324</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13725490868091583</real>
+				<real>0.67843139171600342</real>
 				<key>Green Component</key>
-				<real>0.14509804546833038</real>
+				<real>0.87058824300765991</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.59215688705444336</real>
+				<real>0.62745100259780884</real>
 				<key>Green Component</key>
-				<real>0.51372551918029785</real>
+				<real>0.62745100259780884</real>
 				<key>Red Component</key>
-				<real>0.46666666865348816</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.70196080207824707</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.87058824300765991</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.96078431606292725</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.33333333333333331</real>
 				<key>Green Component</key>
-				<real>0.29019609093666077</real>
+				<real>0.33333333333333331</real>
 				<key>Red Component</key>
-				<real>0.25098040699958801</real>
+				<real>0.33333333333333331</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.058823529630899429</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>1</real>
 			</dict>
 			<key>Application Keypad Allowed</key>
 			<true/>
@@ -68388,11 +68394,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.08235294371843338</real>
+				<real>0.20000000298023224</real>
 				<key>Green Component</key>
-				<real>0.066666670143604279</real>
+				<real>0.20000000298023224</real>
 				<key>Red Component</key>
-				<real>0.047058824449777603</real>
+				<real>0.20000000298023224</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -68422,9 +68428,9 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.84313726425170898</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -68433,7 +68439,7 @@
 			<key>Close Sessions On End</key>
 			<false/>
 			<key>Columns</key>
-			<integer>75</integer>
+			<integer>70</integer>
 			<key>Command</key>
 			<string></string>
 			<key>Cursor Boost</key>
@@ -68441,11 +68447,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.42352941632270813</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -68463,11 +68469,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -68495,7 +68501,7 @@
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
 			<key>Horizontal Spacing</key>
-			<real>0.8934193806475903</real>
+			<real>0.90000000000000002</real>
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Jobs to Ignore</key>
@@ -68812,9 +68818,11 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>InconsolataForPowerline-g 14</string>
+			<string>MesloLGM-RegularForPowerline 14</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<true/>
+			<key>Open Toolbelt</key>
+			<false/>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prevent Opening in a Tab</key>
@@ -68824,7 +68832,7 @@
 			<key>Right Option Key Sends</key>
 			<integer>0</integer>
 			<key>Rows</key>
-			<integer>22</integer>
+			<integer>25</integer>
 			<key>Screen</key>
 			<integer>-1</integer>
 			<key>Scrollback Lines</key>
@@ -68834,20 +68842,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13725490868091583</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.14509804546833038</real>
+				<real>0.83529412746429443</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.70980393886566162</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -68883,7 +68891,7 @@
 			<key>Thin Strokes</key>
 			<integer>1</integer>
 			<key>Transparency</key>
-			<real>0.043706083579881663</real>
+			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
@@ -68891,15 +68899,15 @@
 			<key>Use Bright Bold</key>
 			<true/>
 			<key>Use HFS Plus Mapping</key>
-			<true/>
+			<false/>
 			<key>Use Italic Font</key>
 			<true/>
 			<key>Use Non-ASCII Font</key>
 			<false/>
 			<key>Use Tab Color</key>
-			<false/>
+			<true/>
 			<key>Vertical Spacing</key>
-			<real>1.0428157944277108</real>
+			<real>0.90000000000000002</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -70019,6 +70027,8 @@
 	<integer>0</integer>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
+	<key>NoSyncSilenceAnnoyingBellAutomatically</key>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>493420905.05135697</real>
 	<key>OnlyWhenMoreTabs</key>
@@ -70105,7 +70115,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-12-02T08:50:31Z</date>
+	<date>2016-12-12T17:09:14Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -70115,7 +70125,7 @@
 	<key>ShowBookmarkName</key>
 	<true/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
